--- a/src/main/webapp/resources/stylesheets/estilo.css
+++ b/src/main/webapp/resources/stylesheets/estilo.css
@@ -36,3 +36,27 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
+
+.search-trigger {
+    border-radius:40px;
+    height: 40px;
+    margin-left: 0;
+    width: 220px
+}
+
+.navbar-inverse {
+	background-color: #9eb4c3;
+}
+
+.header-text {
+	color: #f7f7f7;
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 18px;
+    line-height: 20px	
+}
+
+.search-button {
+	border-radius: 40px;
+}
